correction of media query, somethngs is not aligning here

--- a/index.css
+++ b/index.css
@@ -86,12 +86,12 @@ body {
     .container {
         max-width: 100%;
         width: 100%;
-        min-height: 100vh;  
+        min-height: 100%;  
         padding: 20px 40px;
         border-radius: 0;
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: center;
     }  
 
     .container .header {
